# QFtpCompat

./: .gitignore  CMakeLists.txt  LICENSE  README.md  qftpcompat.cpp  qftpcompat.h  qftpcompatcommand_p.h  qftpcompatdirentry.cpp
docs/: Doxyfile.in
docs/html/: annotated.html  annotated_dup.js  class_q_ftp_compat-members.html  class_q_ftp_compat.html  class_q_ftp_compat.js  class_q_ftp_compat_dir_entry-members.html  class_q_ftp_compat_dir_entry.html  class_q_ftp_compat_dir_entry.js  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_enum.html  functions_func.html  index.html  main_8cpp.html  main_8cpp_source.html  menudata.js  navtreedata.js  navtreeindex0.js  qftpcompat_8cpp_source.html  qftpcompat_8h.html  qftpcompat_8h.js  qftpcompat_8h_source.html  qftpcompatcommand__p_8h_source.html  qftpcompatdirentry_8cpp_source.html  qftpcompatdirentry_8h.html  qftpcompatdirentry_8h.js  qftpcompatdirentry_8h_source.html
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  files_1.js  functions_0.js  functions_1.js  (+35 more)
private/: qftpcompatcommand_p.h
src/: QFtpCompat  QFtpCompatDirEntry  qftpcompat.h  qftpcompatdirentry.h
test/: CMakeLists.txt  main.cpp  server_tls.py
